--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -89,21 +89,12 @@ jobs:
         files=( $pattern )
         echo "NAME=${files[0]}" >> ${GITHUB_OUTPUT}
 
-    - name: Rename debug artifact
-      run: mv "./build/debug/${{ steps.libname.outputs.NAME }}" "./build/debug_${{ steps.libname.outputs.NAME }}"
 
-    - name: Upload non-debug artifact
+    - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: ${{ steps.libname.outputs.NAME }}
         path: ./build/${{ steps.libname.outputs.NAME }}
-        if-no-files-found: error
-
-    - name: Upload debug artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: debug_${{ steps.libname.outputs.NAME }}
-        path: ./build/debug_${{ steps.libname.outputs.NAME }}
         if-no-files-found: error
 
     - name: Upload qmod artifact
